src/test/deca/syntax/parser/valid/method_call_args_int.deca
// Test parser, appel d'une méthode avec des int en argument

class Test {
    void testMethod(int x, int y) {
        return (x + y);
    }
}

{
    int z;
    Test test = new Test();
    z = test.testMethod(5,12);
}