src/test/deca/syntax/parser/invalid/field_definition_visibility_symbol.deca
// Parser test, visibility replaced by a special charatcer (.)

class myClass {
    . int x = 12;
}